Fixed layout bug

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -35,20 +35,6 @@ input.rounded {
 	margin: 10px 0;
 }
 
-#live-coding {
-	display: flex;
-	flex-direction: column;
-}
-
-#live-coding > .app-navbar {
-	flex: 0;
-}
-
-#live-coding > .main {
-	flex: 1;
-	width: 100%;
-}
-
 #page, #live-coding {
 	height: 100%;
 }
@@ -357,6 +343,21 @@ input[type=range][orient=vertical] {
 /*-------------------------------------------*/
 /*--------------- Live-coding ---------------*/
 /*-------------------------------------------*/
+
+#live-coding {
+	display: flex;
+	flex-direction: column;
+}
+
+#live-coding > .app-navbar {
+	flex: 0;
+}
+
+#live-coding > .main {
+	display: flex;
+	flex: 1;
+	width: 100%;
+}
 
 .walc-editor-box {
 	width: calc(100% + 3px);
